[tool.poetry]
name = "easyparse"
version = "1.0.5"
description = "A user-friendly, lightweight command-line argument parser."
authors = ["Yudhajit N <28938427+Sh3llcod3@users.noreply.github.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/Sh3llcod3/Easyparse"
homepage = "https://github.com/Sh3llcod3/Easyparse"

classifiers = [
  "Programming Language :: Python :: 3.6",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux"
]

include = [
  "easyparse/terminal_colors.py"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-string-format = "*"
flake8-tidy-imports = "*"
flake8-todo = "*"
setuptools = "*"
twine = "*"
pyinstaller = "*"
requests = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
